--- a/css/app.css
+++ b/css/app.css
@@ -47,6 +47,293 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+html {
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+html,
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background: #ffffff url('../img/geometry2.png');
+	/* Background pattern from Subtle Patterns */
+	font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+h1 {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+}
+
+
+/*
+ * Styles for the deck of cards
+ */
+
+.deck {
+	width: 660px;
+	min-height: 680px;
+	background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+	padding: 32px;
+	border-radius: 10px;
+	box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 0 3em;
+}
+
+.deck .card {
+	height: 125px;
+	width: 125px;
+	background: #2e3d49;
+	font-size: 0;
+	color: #ffffff;
+	border-radius: 8px;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+}
+
+.deck .card.open {
+	transform: rotateY(0);
+	background: #02b3e4;
+	cursor: default;
+}
+
+.deck .card.show {
+	font-size: 33px;
+}
+
+.deck .card.match {
+	cursor: default;
+	background: #02ccba;
+	font-size: 43px;
+}
+
+
+/*
+ * Styles for the Score Panel
+ */
+
+.score-panel {
+	text-align: left;
+	width: 345px;
+	margin-bottom: 10px;
+}
+
+.score-panel .stars {
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	margin: 0 5px 0 0;
+}
+
+.score-panel .stars li {
+	list-style: none;
+	display: inline-block;
+}
+
+.timer {
+	text-align: center;
+	display: inline-block;
+	padding-left: 20px;
+}
+
+.score-panel .restart {
+	float: right;
+	cursor: pointer;
+}
+
+/*
+ * Styles for the modal
+ */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: auto;
+  width: 100%;
+	height: 100%;
+  padding-top: 200px;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: .5;
+}
+
+.modal-box {
+  position: relative;
+	z-index: 1;
+  top: -500px;
+	display: block;
+  overflow: hidden;
+  max-width: 250px;
+	max-height: 250px;
+	margin-left: auto;
+	margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	text-align: center;
+	line-height: 1.5em;
+}
+
+.modal-display {
+	display: none;
+}
+
+.yes,
+.no {
+  width: 50px;
+}
+
+.buttons {
+  padding: 10px;
+}
+
+
+
+
+
+
+
+/* == DESKTOPS, SOME LAPTOPS, IPAD === */
+
+@media screen and (min-width: 950px) {
+  .container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  }
+
+}
+
+/* === TABLETS === */
+
+@media screen and (min-width: 721px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  }
+  .deck {
+    width: 680px;
+  }
+
+}
+
+/* === CELL PHONES AND SOME TABLETS === */
+
+@media screen and (min-width: 100px) and (max-width: 720px){
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  }
+
+  .deck {
+    width: 290px;
+    min-height: 450px;
+    padding: 28px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 3em;
+  }
+
+  body {
+    font-size: 10px;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  .deck .card {
+    height: 55px;
+    width: 55px;
+    display: flex;
+  }
+
+  .deck .card.show {
+  	font-size: 20px;
+  }
+
+  .deck .card.match {
+  	font-size: 30px;
+  }
+
+  /*
+   * Styles for the scoring panel
+   */
+
+  .score-panel {
+  	width: 245px;
+  	margin-bottom: 10px;
+    margin-top: -5px;
+  }
+
+  /*
+   * Styles for the modal
+   */
+
+  .modal-box {
+    position: relative;
+  	z-index: 1;
+    top: -320px;
+    max-width: 130px;
+  	max-height: 130px;
+    padding-top: 15px;
+  	line-height: 1.5em;
+  }
+
+  .yes,
+  .no {
+    width: 48px;
+  }
+
+  .buttons {
+    padding: 5px;
+  }
+}
+
     align-items: center;
     margin: 0 0 3em;
 }
